Fixed typo in kHelpCenterConnectionHelpUrl

Removed extra slash from help center URL, also updated the histogram
enum to match the recommendation in base/metrics/histogram_macros.h

Bug: 853897

Change-Id: Ie6372e1b535ae50d468680842e2213c9c404cbb0
Reviewed-on: https://chromium-review.googlesource.com/1104959
Commit-Queue: Carlos IL <carlosil@chromium.org>
Reviewed-by: Emily Stark <estark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568160}
Former-commit-id: 3c59d0b5fc4c75021da266b7dfc4b12910b2c239